enhance(apps/docs): extend documentation with group activity videos and additional sections on gamification (#4269)
Co-authored-by: Roland Schläfli <rolandschlaefli@gmail.com>

--- a/apps/docs/docs/gamification/overview.mdx
+++ b/apps/docs/docs/gamification/overview.mdx
@@ -2,4 +2,86 @@
 title: Overview
 ---
 
-> COMING SOON
+:::info
+This part of our documentation is work in progress and will be continuously extended with more details. For a more detailed overview of specific implementation details, please refer to the subsequent sections. To learn more about the didactical concepts behind the gamification concept in KlickerUZH, please refer to the [use case on gamification](/use_cases/gamification/).
+:::
+
+KlickerUZH integrates a comprehensive gamification framework throughout the application, designed to enhance student **motivation** and **engagement**. Participants can create personalized avatars and collect **points** for answering questions in various activities, such as quizzes and microlearnings. These points accumulate on different **leaderboards**, fostering a sense of achievement and driving students to improve their performance.
+
+At the same time, the gamification system extends beyond individual competition and also promotes **collaboration**. Students can form [groups](/student_tutorials/groups_activities/) and participate in [group activities](/tutorials/group_activity/), where points and **achievements** are awarded for successful completion. This dual approach of individual and group challenges creates a well-rounded learning experience that caters to different learning styles and preferences.
+
+KlickerUZH's gamification features provide immediate feedback and recognition, helping students track their progress over time and stay motivated. In addition to course-specific points, students also collect **experience points** that span across courses, allowing for long-term progression and achievement. This multi-faceted approach to gamification aims to create a more engaging and effective learning environment, benefiting both students and lecturers.
+
+## Goals of Gamification
+
+The gamification features in KlickerUZH are designed to enhance the learning experience for students while providing lecturers with additional tools to support their teaching methods. Our aim is to make learning more engaging, interactive, and rewarding in higher education settings. Therefore, KlickerUZH tries to create an environment where students actively participate in their educational tenure, rather than only passively receiving information.
+
+The primary goals of our gamification approach include:
+
+- Increasing student **engagement** and **motivation**
+- Encouraging **active participation** in lectures and coursework
+- Creating a more **dynamic learning environment**
+- Providing opportunities for **constructive competition** and promoting **collaboration**
+
+Additionally, we also aim to:
+
+- Offer timely feedback and recognition for accomplishments
+- Support students' progress throughout their courses
+- Encourage collaboration and a sense of community among learners
+
+By implementing these strategies, we hope to make complex subjects more approachable and improve the **retention of knowledge** through repeated engagement and reinforcement.
+
+## Gamified Activities and Competition
+
+KlickerUZH incorporates gamification elements into all its activities, enhancing student engagement and motivation. While gamification is optional for most activities, it is automatically activated in gamified courses, streamlining the process for lecturers. For a deeper understanding of the underlying didactic concepts, please refer to the [use case for live quizzes](/use_cases/live_quiz/).
+
+Gamified **live quizzes** offer students:
+
+- Points for **active participation** in answering questions
+- **Bonus points** for swift and accurate responses (when solutions are provided)
+- **Rankings** on the live quiz leaderboard upon completion of each quiz block
+- **Achievements** for securing first, second, and third positions at the quiz's conclusion
+
+The real-time nature of live quizzes enables a **dynamic scoring system**, rewarding the first correct answer with the highest bonus points, followed by a gradual decrease over time.
+
+**Practice quizzes** and **microlearnings** allow students to:
+
+- Earn points based on answer accuracy (reflected on the course leaderboard)
+- Accumulate experience points (applicable across courses and tied to their profile level)
+
+## Groups and Collaboration
+
+KlickerUZH features **group activities** to promote collaboration alongside competition. This aspect of the gamification framework is designed to foster teamwork and enhance the learning experience through peer interaction. Group activities are an integral part of the gamified course structure and can be easily integrated by lecturers.
+
+In **group activities**, students can:
+
+- Form or join **groups** within their courses
+- Collaborate on solving group activities based on a set of questions and **distributed hints** among group members
+- Earn **group points** by completing collaborative tasks
+- View their group's ranking on a separate **group leaderboard** within the course overview
+- Participate in **randomly created groups** for large lecture settings, promoting diverse interactions
+
+The benefits of group activities include:
+
+- Encouraging **peer learning** and knowledge sharing
+- Developing **communication** and **teamwork** skills
+- Providing a **balanced approach** to individual and collaborative learning
+- Offering a **different perspective** on course material through group discussions
+
+Students receive **achievements** for completing and successfully solving group activities, which are displayed on their profile view along with the number of times earned. These achievements serve as recognition for collaborative efforts and successful teamwork.
+
+The group activities in KlickerUZH are designed to complement individual learning experiences, creating a well-rounded educational environment that prepares students for real-world scenarios where collaboration is key. By incorporating both competitive and collaborative elements, KlickerUZH aims to cater to diverse learning preferences and enhance overall student engagement.
+
+## Participant Experience
+
+KlickerUZH offers a rich and engaging experience for students through its gamified elements. Participants can:
+
+- Create **personalized avatars** to represent themselves in the platform
+- Earn **points** for answering questions correctly in various activities
+- Accumulate **experience points (XP)** that span across courses, allowing for long-term progression
+- Track their **individual performance** and ranking within specific courses
+- **Collaborate** in groups and participate in challenging group activities
+- **Progress** through levels as they accumulate XP, providing a sense of achievement and growth
+- Engage in friendly **competition** through multiple leaderboards (course-specific and overall)
+
+Students can view their achievements, points, and rankings on their personal profile page, allowing them to see their progress at a glance. The gamification features in KlickerUZH are designed to provide immediate feedback and recognition, helping students stay motivated and track their progress over time.
