--- a/apps/docs/docs/tutorials/supported_element_types.mdx
+++ b/apps/docs/docs/tutorials/supported_element_types.mdx
@@ -3,13 +3,56 @@ title: Supported Element Types
 ---
 
 Based on learning settings or learning goals, you can choose from seven different element types in KlickerUZH (i.e., five types of questions, content elements, and flashcards). Questions support the definition of a sample solution, which is used for automated grading processes in asynchronous KlickerUZH activities, such as practice quizzes and microlearnings. To use a question in a live quiz setting, you do not have to provide information on the answer correctness.
+
+:::info
 For a more detailed description on how to create the listed elements in the KlickerUZH lecturer interface, please refer to the documentation on [element management](/tutorials/element_management/) or check out the tooltips for the corresponding fields in the editor directly.
+:::
+
+## Content Element (CT)
+
+Content elements are a great way to provide additional information to students. They fully support LaTeX and Markdown syntax and allow to include images. You can also use them to recap relevant course content in asynchronous KlickerUZH elements before asking a series of questions or even in between them to build coherent case studies. A preview on the right allows you to see how the question will appear to students.
+
+### Lecturer View
+
+This is how it looks from the **lecturer’s** perspective.
+
+![Content Element - Lecturer View](/img_v3/supported_element_types/CT_lecturer.png)
+
+### Student View
+
+For **students**, content elements are viewed as follows, with the option of marking them as “read”.
+
+![Content Element - Student View](/img_v3/supported_element_types/CT_student.png)
+
+## Flashcards (FC)
+
+Flashcards enable students to practice content, like definitions, by heart using a much simpler modality. Students then provide a grading response for each flashcard themselves, indicating whether or not they already remember the corresponding content correctly based on the provided explanation. In this way, flashcards in practice quizzes can also be ordered in a spaced-repetition manner. Both sides of the flashcard fully support LaTeX and Markdown syntax, as well as images. A preview on the right allows you to see how the question will appear to students.
+
+### Lecturer View
+
+This is how it looks from the **lecturer’s** perspective.
+
+![Flashcard - Lecturer View](/img_v3/supported_element_types/FT_lecturer.png)
+
+### Student View
+
+For **students**, flashcards are viewed as follows, with the solution and grading option appearing after turning the card.
+
+![Flashcard - Student View](/img_v3/supported_element_types/FC_student.png)
+
+![Flashcard - Student View with Feedbacks](/img_v3/supported_element_types/FC_student_sol.png)
 
 ## Single Choice (SC)
 
-For single choice questions, students select one of the available answer options. You should specify the correct answer and may also provide feedback (per answer option) and an explanation if desired. These elements can be formatted using the editor, Markdown, or LaTeX syntax, and images can be included as needed. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
+For single choice questions, students select one of the available answer options. You should specify the correct answer and may also provide feedback (per answer option) and an explanation if desired. These elements can be formatted using the editor, Markdown, or LaTeX syntax, and images can be included as needed. A preview on the right allows you to see how the question will appear to students.
+
+### Lecturer View
+
+This is how it looks from the **lecturer’s** perspective.
 
 ![Single Choice Question - Lecturer View](/img_v3/supported_element_types/SC_lecturer.png)
+
+### Student View
 
 For **students**, single choice questions are viewed as follows, with the solution (and feedback) appearing in asynchronous activities after submitting their answer.
 
@@ -19,9 +62,15 @@ For **students**, single choice questions are viewed as follows, with the soluti
 
 ## Multiple Choice (MC)
 
-With multiple choice questions one or more of the provided answers may be correct. You should mark correct answers and can offer feedback (per answer option) and an explanation if you wish. You can format these elements using the editor, Markdown, or LaTeX syntax, and include images if needed. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
+With multiple choice questions one or more of the provided answers may be correct. You should mark correct answers and can offer feedback (per answer option) and an explanation if you wish. You can format these elements using the editor, Markdown, or LaTeX syntax, and include images if needed. A preview on the right allows you to see how the question will appear to students.
+
+### Lecturer View
+
+This is how it looks from the **lecturer’s** perspective.
 
 ![Multiple Choice Question - Lecturer View](/img_v3/supported_element_types/MC_lecturer.png)
+
+### Student View
 
 For **students**, multiple choice questions are viewed as follows, with the solution (and feedback) appearing in asynchronous activities after submitting their answer.
 
@@ -31,9 +80,15 @@ For **students**, multiple choice questions are viewed as follows, with the solu
 
 ## Kprime (KP)
 
-Kprime questions always present four possible answers, each of which must be marked as correct or incorrect. This format has proven effective for theoretical assessments due to its good selectivity and low likelihood of success when guessing. You can mark each answer option as correct or incorrect and offer feedback (per answer option) and an explanation if you wish. You can format these elements using the editor, Markdown, or LaTeX syntax, and include images if needed. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
+Kprime questions always present four possible answers, each of which must be marked as correct or incorrect. This format has proven effective for theoretical assessments due to its good selectivity and low likelihood of success when guessing. You can mark each answer option as correct or incorrect and offer feedback (per answer option) and an explanation if you wish. You can format these elements using the editor, Markdown, or LaTeX syntax, and include images if needed. A preview on the right allows you to see how the question will appear to students.
+
+### Lecturer View
+
+This is how it looks from the **lecturer’s** perspective.
 
 ![Kprime Question - Lecturer View](/img_v3/supported_element_types/KP_lecturer.png)
+
+### Student View
 
 For **students**, Kprime questions are viewed as follows, with the solution (and feedback) appear-ing after submitting their answer in asynchronous activities.
 
@@ -41,21 +96,17 @@ For **students**, Kprime questions are viewed as follows, with the solution (and
 
 ![Kprime Question - Student View with Feedbacks](/img_v3/supported_element_types/KP_student_sol.png)
 
-## Free Text (FT)
-
-Free text questions enable students to respond to the question by typing in their answer. Free text questions can be integrated into live quizzes and group activities (not practice quizzes and microlearnings). You can specify additional restrictions, like a maximum length, as well as sample solutions for graded and gamified settings (note that the student response must match one of the sample solutions exactly to be counted as correct). All of those texts can be formatted using the editor or Markdown and LaTeX syntax and can contain images. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
-
-![Free Text Question - Lecturer View](/img_v3/supported_element_types/FT_lecturer.png)
-
-For **students**, free text questions are viewed as follows. This is the view from a live quiz. For students to view the solution, you can choose to share it on the lecturer evaluation view.
-
-![Free Text Question - Student View](/img_v3/supported_element_types/FT_student.png)
-
 ## Numerical Response (NR)
 
-Numerical response questions enable students to respond to the question by typing in their numerical answer. You can specify additional restrictions, like minimum and maximum values as well as display units. It is also possible to specify solution ranges, which are considered to be correct for graded and gamified settings, as well as a general explanation. All of these texts can be formatted using the editor or Markdown and LaTeX syntax and can contain images. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
+Numerical response questions enable students to respond to the question by typing in their numerical answer. You can specify additional restrictions, like minimum and maximum values as well as display units. It is also possible to specify solution ranges, which are considered to be correct for graded and gamified settings, as well as a general explanation. All of these texts can be formatted using the editor or Markdown and LaTeX syntax and can contain images. A preview on the right allows you to see how the question will appear to students.
+
+### Lecturer View
+
+This is how it looks from the **lecturer’s** perspective.
 
 ![Numerical Response Question - Lecturer View](/img_v3/supported_element_types/NR_lecturer.png)
+
+### Student View
 
 For **students**, numerical response questions are viewed as follows, with the solution appearing after submitting their answer in asynchronous activities.
 
@@ -63,24 +114,18 @@ For **students**, numerical response questions are viewed as follows, with the s
 
 ![Numerical Response Question - Student View with Feedbacks](/img_v3/supported_element_types/NR_student_sol.png)
 
-## Flashcards (FC)
+## Free Text (FT)
 
-Flashcards enable students to practice content, like definitions, by heart using a much simpler modality. Students then provide a grading response for each flashcard themselves, indicating whether or not they already remember the corresponding content correctly based on the provided explanation. In this way, flashcards in practice quizzes can also be ordered in a spaced-repetition manner. Both sides of the flashcard fully support LaTeX and Markdown syntax, as well as images. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
+Free text questions enable students to respond to the question by typing in their answer. Free text questions can be integrated into live quizzes and group activities (not practice quizzes and microlearnings). You can specify additional restrictions, like a maximum length, as well as sample solutions for graded and gamified settings (note that the student response must match one of the sample solutions exactly to be counted as correct). All of those texts can be formatted using the editor or Markdown and LaTeX syntax and can contain images. A preview on the right allows you to see how the question will appear to students.
 
-![Flashcard - Lecturer View](/img_v3/supported_element_types/FT_lecturer.png)
+### Lecturer View
 
-For **students**, flashcards are viewed as follows, with the solution and grading option appearing after turning the card.
+This is how it looks from the **lecturer’s** perspective.
 
-![Flashcard - Student View](/img_v3/supported_element_types/FC_student.png)
+![Free Text Question - Lecturer View](/img_v3/supported_element_types/FT_lecturer.png)
 
-![Flashcard - Student View with Feedbacks](/img_v3/supported_element_types/FC_student_sol.png)
+### Student View
 
-## Content Element (CT)
+For **students**, free text questions are viewed as follows. This is the view from a live quiz. For students to view the solution, you can choose to share it on the lecturer evaluation view.
 
-Content elements are a great way to provide additional information to students. They fully support LaTeX and Markdown syntax and allow to include images. You can also use them to recap relevant course content in asynchronous KlickerUZH elements before asking a series of questions or even in between them to build coherent case studies. A preview on the right allows you to see how the question will appear to students. This is how it looks from the **lecturer’s** perspective.
-
-![Content Element - Lecturer View](/img_v3/supported_element_types/CT_lecturer.png)
-
-For **students**, content elements are viewed as follows, with the option of marking them as “read”.
-
-![Content Element - Student View](/img_v3/supported_element_types/CT_student.png)
+![Free Text Question - Student View](/img_v3/supported_element_types/FT_student.png)
