chore: update docs to reflect logic change in microlearning publishing

--- a/apps/docs/docs/tutorials/microlearning.mdx
+++ b/apps/docs/docs/tutorials/microlearning.mdx
@@ -78,7 +78,9 @@ There are multiple options to add a question to a stack:
 1. After you create a Microlearning session, you can find it under Courses. Then select the course to which you added the session.
 2. In the course you have multiple options. You can...
    - ...copy the access link and provide it to your participants.
+   - ...copy the access link to integrate the microlearning into your learning management system through LTI.
    - ...edit your session before publishing it.
-   - ...publish it. Not that publishing a Practice Quiz or Microlearning session makes the item visible to all participants. This process cannot be undone. Changes to the content of an item cannot be made after publishing.
-   - ...delete your session.
+   - ...extend the duration of your microlearning, while it is still running.
+   - ...publish it. Note that the publishing process makes the microlearning available to all participants after the scheduled start date. Until then, the microlearning will have a "Scheduled" state and can be unpublished and edited again. The change from the scheduled state to the "Published" state is performed automatically at the scheduled start date and is irreversible.
+   - ...delete your microlearning with certain restrictions.
 3. After publishing your session, your participants can see the session in their account by joining the course. In the app, the Microlearning session is displayed to the participants as shown in the screenshots below.
