--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -6,10 +6,10 @@
     "messages/"
   ],
   "devDependencies": {
-    "typescript": "5.6.2"
+    "typescript": "~5.6.3"
   },
   "peerDependencies": {
-    "next-intl": "3.18.1"
+    "next-intl": "^3.18.1"
   },
   "volta": {
     "extends": "../../package.json"
