--- a/packages/i18n/package.json
+++ b/packages/i18n/package.json
@@ -1,17 +1,18 @@
 {
   "name": "@klicker-uzh/i18n",
-  "type": "module",
+  "version": "3.3.0-alpha.1",
   "files": [
     "index.ts",
     "messages/"
   ],
   "devDependencies": {
-    "typescript": "5.4.5"
+    "typescript": "~5.6.3"
   },
   "peerDependencies": {
-    "next-intl": "3.18.1"
+    "next-intl": "^3.21.1"
   },
   "volta": {
     "extends": "../../package.json"
-  }
+  },
+  "type": "module"
 }
